# cpp-snippets

./: CLAUDE.md  README.md  build_all.sh  clean_all.sh  future_work.md  linux-build-notes.md
.githooks/: pre-commit
algorithms/: README.md
algorithms/binary-search/: CMakeLists.txt  README.md
algorithms/bloom-filter/: CMakeLists.txt  README.md
algorithms/compression/: CMakeLists.txt  README.md  frost_giants_daughter.txt
algorithms/hash-table/: CMakeLists.txt  README.md
algorithms/hyperloglog/: CMakeLists.txt  README.md
algorithms/merkle-tree/: CMakeLists.txt  README.md
algorithms/quick-sort/: CMakeLists.txt  README.md
concurrency/: README.md
concurrency/active-object-pattern/: CMakeLists.txt  README.md
concurrency/atomic/: CMakeLists.txt  README.md
concurrency/atomic/headers/: atomic_operations.hpp
concurrency/atomic/src/: main.cpp
concurrency/barrier-example/: CMakeLists.txt  README.md
concurrency/cpp20-latch/: CMakeLists.txt  README.md
concurrency/dining-philosophers/: .gitignore  CMakeLists.txt  README.md
concurrency/happens-before/: CMakeLists.txt  README.md
concurrency/happens-before/headers/: happens_before_demo.hpp
concurrency/happens-before/src/: main.cpp
concurrency/jthread-test/: CMakeLists.txt  README.md  main.cpp
concurrency/jthreads/: CMakeLists.txt  README.md
concurrency/latch/: CMakeLists.txt  README.md
concurrency/pipelining/: CMakeLists.txt  README.md
concurrency/proactor/: CMakeLists.txt  README.md
concurrency/proactor/include/: async_operation.hpp  buffer.hpp  logger.hpp  operation_types.hpp
concurrency/proactor/include/operations/: async_accept_operation.hpp
concurrency/proactor/src/: main.cpp  proactor.cpp
concurrency/proactor/src/core/: async_operation.cpp  error.cpp  event_queue.cpp  logger.cpp  proactor.cpp
concurrency/proactor/src/operations/: async_read_operation.cpp
concurrency/producer-consumer/: CMakeLists.txt  README.md
concurrency/promise-future/: CMakeLists.txt  README.md
concurrency/promise-future/src/: main.cpp
concurrency/promise_future_tester/: CMakeLists.txt  README.md
concurrency/reader-writer/: CMakeLists.txt  README.md
concurrency/shared_mutex/: README.md  (+1 more)
concurrency/stop_token-source-callback/: CMakeLists.txt  README.md
concurrency/stop_token-source-callback/src/: stop_token_source_callback.cpp
concurrency/thread-affinity/: CMakeLists.txt  README.md
concurrency/thread-affinity/headers/: thread_affinity.hpp
concurrency/thread-affinity/src/: main.cpp
concurrency/thread-pool-load-balance/: CMakeLists.txt  README.md
concurrency/thread-pool-load-balance/include/: thread_pool.hpp
concurrency/thread-pool-load-balance/src/: main.cpp
cpp-features/cpp20/modules/: CMakeLists.txt
cpp-features/cpp20/modules/src/: modules.cpp
cpp-idioms/rule-of-five/: CMakeLists.txt  README.md
cpp-idioms/rule-of-five/headers/: resource_manager.hpp
cpp-idioms/rule-of-five/src/: main.cpp  test_rule_of_five.cpp
data-structures/newtype-wrapper/: CMakeLists.txt  README.md
data-structures/newtype-wrapper/headers/: strong_type.hpp
data-structures/newtype-wrapper/src/: edge_case_tests.cpp  main.cpp  performance_tests.cpp
design-patterns/: DP_TODO.md  README.md  TODO-patterns.md
design-patterns/behavioral/iterator/: CMakeLists.txt  README.md
design-patterns/behavioral/iterator/header/: iterator.hpp
design-patterns/behavioral/iterator/src/: main.cpp
design-patterns/behavioral/null-object/: CMakeLists.txt  README.md
design-patterns/behavioral/null-object/headers/: null_service.hpp  real_service.hpp  service_interface.hpp
design-patterns/behavioral/null-object/src/: main.cpp  null_service.cpp  real_service.cpp  service_interface.cpp
design-patterns/cpp-specific/crtp/: CMakeLists.txt  README.md
design-patterns/cpp-specific/crtp/headers/: crtp.hpp
design-patterns/cpp-specific/crtp/src/: main.cpp  test_mixins.cpp  test_object_counting.cpp  test_performance.cpp  test_serialization.cpp  test_static_polymorphism.cpp
design-patterns/creational/multiton/: CMakeLists.txt  README.md
design-patterns/creational/multiton/headers/: cache_manager.hpp  database_connection.hpp  multiton.hpp
design-patterns/creational/multiton/src/: main.cpp  multiton_test.cpp
headers/: project_utils.hpp
language-features/core/decltype/: CMakeLists.txt  README.md
language-features/core/decltype/headers/: decltype_examples.hpp
language-features/core/decltype/src/: decltype_examples.cpp  main.cpp  test_decltype.cpp
language-features/cpp23/mdspan/: CMakeLists.txt  README.md
language-features/cpp23/mdspan/headers/: mdspan_example.hpp
language-features/cpp23/mdspan/src/: main.cpp  mdspan_example.cpp
networking/boost-asio/: CMakeLists.txt  README.md
networking/boost-asio/src/: boost_asio.cpp
networking/simple_client_server/: CMakeLists.txt  README.md
networking/simple_client_server/src/: client.cpp  main.cpp  server.cpp
networking/simple_subnet_ping/: CMakeLists.txt  README.md
networking/simple_subnet_ping/headers/: ping_manager.hpp  subnet_scanner.hpp
networking/simple_subnet_ping/src/: main.cpp  ping_manager.cpp  subnet_scanner.cpp
odds-and-ends/cpp20-modules/: CMakeLists.txt  README.md  manual_build.sh
odds-and-ends/cpp20-modules/src/: math_module.cpp  math_module.cppm  modules.cpp
odds-and-ends/cpp23-turing-machines/: CMakeLists.txt  README.md
odds-and-ends/cpp23-turing-machines/headers/: arithmetic_turing_machine.hpp  basic_turing_machine.hpp  extended_turing_machine.hpp  universal_turing_machine.hpp
odds-and-ends/cpp23-turing-machines/src/: main.cpp
testing-files/: frost_giants_daughter-altered.txt  frost_giants_daughter.txt
tooling/: build_all.sh  clean_all.sh  comment_corrector.sh  copy_structure.sh  file_find_open.sh  generate_snippets_index.py  logger_replacer.py  new_line.sh  update_cmake_license.sh  update_header_license.sh
utilities/dates/: .gitignore  CMakeLists.txt  README.md
utilities/dates/include/date/: chrono_io.h  date.h  ios.h  islamic.h  iso_week.h  julian.h  ptz.h  solar_hijri.h  tz.h  tz_private.h
utilities/dates/src/: dates.cpp
(+361 files in other folders)
